[package]
name = "conban"
version = "0.1.0"
authors = ["Al Madireddy <al.madireddy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
easycurses = "0.13.0"
serde = {version = "1.0.110", features = ["derive"]}
serde_json = "1.0.53"
dirs = "2.0.2"
